# krk_ml_utils

./: .gitignore  LICENSE  README.md  build_dist_files.sh  pyproject.toml  requirements.txt
example_notebooks/: create_dataset.ipynb  create_housing_rlm_dataset.ipynb  create_housing_rlm_tokenizer.ipynb  dataset_notes.md  track_colab.ipynb  train_rlm.ipynb  train_transformer_parallel.ipynb
krk_ml_utils/: datasets.py  eda.py  flax_utils.py  loss_functions.py  models.py  nn.py  preprocessing.py  training.py  training_multi_gpu.py  transformer_components.py  transformers.py
